discussion/kv_engine/139265/139265_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-42282 magma-kvstore: Use disk snapshot for bySeqno scan

The bySeqno iterator requires the snapshot to be held for the duration
of the scan. The default snapshot holds inmemory memtables at that
point-in-time as part of the snapshot. This results in signficant memory
if the snapshot needs to be held for a longer duration.

This issue can be resolved by forcing writecache flush for the
kvstore and obtain the diskonly snapshot for performing bySeqno scan.

Change-Id: I5d44b7e55aa6376940782d20c768762dbc3bb5ce

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Sarath Lakshman
Date: 2020-10-30 08:12:33.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-10-30 08:21:42.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31454/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31454/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6841/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6718/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6718/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14642/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14642/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7009/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7009/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5364/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1302:38: error: no viable conversion from "Vbid" to "magma::Magma::KVStoreID" (aka "unsigned short") [clang-diagnostic-error]
    auto status = magma->SyncKVStore(vbid);
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/magma/include/libmagma/magma.h:134:40: note: passing argument to parameter "kvID" here
    Status SyncKVStore(const KVStoreID kvID);
                                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5364/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1302:38:
error: no viable conversion from "Vbid" to "magma::Magma::KVStoreID" (aka "unsigned short") [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5364/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5784/ : FAILURE

Compile error at [2020-10-30T08:17:03.930Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1302:38:
error: no viable conversion from "Vbid" to "magma::Magma::KVStoreID" (aka "unsigned short")
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5784/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3893/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
